--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Typewriter"
-description: "So I was feeling nostalgic."
+title: "Blurrrrrrrr"
+description: "Welcome to Chen Haoyue's blog."
 baseurl: ""
 url: "http://alixedi.github.io"
 
